# seatbelt

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
docs/plans/: IMPLEMENTATION_SPEC.md
docs/specs/: PRODUCT_SPEC.md
examples/: basic.rs
lib/: Cargo.toml
lib/src/: error.rs  explainer.rs  lib.rs  log_stream.rs
lib/src/presets/: mod.rs
lib/src/presets/profiles/: ai-agent-networked.yaml  ai-agent-permissive.yaml  ai-agent-strict.yaml  build-tool.yaml  network-only.yaml  read-only.yaml
lib/src/profile/: compiler.rs  default.rs  linter.rs  loader.rs  mod.rs  resolver.rs  schema.rs
lib/src/sbpl/: ops.rs
tests/: integration.rs
